--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,8 @@
     "settings.lustria.hint": "Adds the Lustrian between adventures endeavours and replace all travel endeavours with the ones listed in Lustria.",
     "settings.dwarf.name": "Dwarfen Endeavours",
     "settings.dwarf.hint": "Adds the Dwarfen between adventures endeavours and replace all travel endeavours with the delving endeavours (Dwarf Player's Guide & Lords of Stone and Steel).",
+    "settings.helf.name": "Intrigue Endeavours",
+    "settings.helf.hint": "Adds intriguing between adventures endeavours (High Elf Player's Guide & Sea Wardens of Cothique).",
     "settings.criminal.name": "Criminal Endeavours (Deft Steps Light Fingers)",
     "settings.criminal.hint": "Adds the criminal endeavours included in Deft Steps Light Fingers.",
     "settings.organizedcrime.name": "Organized Crime Endeavours (Deft Steps Light Fingers)",
@@ -73,7 +75,7 @@
     "WFRP4eEndeavours.BA.Fanmaris": "Fanmaris's Perfect Shot (Warriors)",
     "WFRP4eEndeavours.BA.Leitdorf": "The Leitdorf Defence (Warriors)",
     "WFRP4eEndeavours.BA.Quartermaster": "The Quartermaster Shuffle (Warriors)",
-    "WFRP4eEndeavours.BA.Brew": "Brew Potion",
+    "WFRP4eEndeavours.BA.Potion": "Brew Potion",
     "WFRP4eEndeavours.BA.Ingredients": "Gather Ingredients",
     "WFRP4eEndeavours.BA.Familiar": "Improve Familiar",
     "WFRP4eEndeavours.BA.Ritual": "Perform Ritual",
@@ -111,6 +113,9 @@
     "WFRP4eEndeavours.BA.ForgeRune": "Forge Rune",
     "WFRP4eEndeavours.BA.Oath": "Swear Oath",
     "WFRP4eEndeavours.BA.Slayer": "Take the Slayer Oath",
+    "WFRP4eEndeavours.BA.Intrigue": "Intrigue",
+    "WFRP4eEndeavours.BA.Aspersions": "Cast Aspersions",
+    "WFRP4eEndeavours.BA.RepairReputation": "Repair Reputation",
 
     "WFRP4eEndeavours.Travel.Woodcraft": "Woodcraft",
     "WFRP4eEndeavours.Travel.Forage": "Forage",
@@ -159,14 +164,14 @@
     "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputation}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.vRL5isWEUYHYnDLg]{Reputation}",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Research Lore}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HZg1fkgEJW7AKrm2]{Research Lore}",
     "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Study a Mark}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Study a Mark}",
-    "WFRP4eEndeavours.Link.Woodcraft": "Woodcraft.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
-    "WFRP4eEndeavours.Link.Forage": "Forage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
-    "WFRP4eEndeavours.Link.Information": "Gather Information.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
-    "WFRP4eEndeavours.Link.Watch": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
-    "WFRP4eEndeavours.Link.MapRoute": "Map the Route.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.KngazhroUpOdUc6R]{Start Mapping the Route}",
-    "WFRP4eEndeavours.Link.Practice": "Practice a Skill.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.rxXm0CRRxbTLlgpN]{Practice a Skill}",
-    "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
-    "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
+    "WFRP4eEndeavours.Link.Woodcraft": "@UUID[JournalEntry.1tdhntCNqK83TS94.JournalEntryPage.3gV92XdlsnWo7CMS]{Woodcraft}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
+    "WFRP4eEndeavours.Link.Forage": "@UUID[JournalEntry.1tdhntCNqK83TS94.JournalEntryPage.DWosXgF1vKBGbD2f]{Forage}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
+    "WFRP4eEndeavours.Link.Information": "@UUID[JournalEntry.1tdhntCNqK83TS94.JournalEntryPage.nXifHPVTBGJZromE]{Gather Information}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
+    "WFRP4eEndeavours.Link.Watch": "@UUID[JournalEntry.1tdhntCNqK83TS94.JournalEntryPage.LCBEcwYXKzb7s597]{Keep Watch}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
+    "WFRP4eEndeavours.Link.MapRoute": "@UUID[JournalEntry.1tdhntCNqK83TS94.JournalEntryPage.LOleIH3lgT1EDh4k]{Map the Route}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.KngazhroUpOdUc6R]{Start Mapping the Route}",
+    "WFRP4eEndeavours.Link.Practice": "@UUID[JournalEntry.1tdhntCNqK83TS94.JournalEntryPage.VUsiceojepLtPwjw]{Practice a Skill}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.rxXm0CRRxbTLlgpN]{Practice a Skill}",
+    "WFRP4eEndeavours.Link.Recuperate": "@UUID[JournalEntry.1tdhntCNqK83TS94.JournalEntryPage.pYRQj2dgsIrRmgH1]{Recuperate}.",
+    "WFRP4eEndeavours.Link.Camp": "@UUID[JournalEntry.1tdhntCNqK83TS94.JournalEntryPage.ZeMXDXfUIGAwan7q]{Make Camp}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
     "WFRP4eEndeavours.Link.College": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.4k9zO8G9Ay17d6mE]{College Research}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{College Research}",
     "WFRP4eEndeavours.Link.Patronage": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.uhLjGqt3xvPs31y9]{Patronage}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patronage}",
     "WFRP4eEndeavours.Link.Penance": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.wXzB8KB4b18ALbhM]{Penance}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penance}",
@@ -177,7 +182,7 @@
     "WFRP4eEndeavours.Link.Fanmaris": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#fanmariss-perfect-shot]{Fanmaris's Perfect Shot}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{Fanmaris's Perfect Shot}",
     "WFRP4eEndeavours.Link.Leitdorf": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#the-leitdorf-defence]{The Leitdorf Defence}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RUhxuIyB9dMVRRit]{The Leitdorf Defence}",
     "WFRP4eEndeavours.Link.Quartermaster": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#the-quartermaster-shuffle]{The Quartermaster Shuffle}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RFeMoXNQ6qpYPwgG]{Find a Job} and @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v1Ax92hFkPuR4xTz]{Do the Job}",
-    "WFRP4eEndeavours.Link.Brew": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.hS8fXNOVs0vTvpiD]{Brew Potion}.",
+    "WFRP4eEndeavours.Link.Potion": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.hS8fXNOVs0vTvpiD]{Brew Potion}.",
     "WFRP4eEndeavours.Link.Ingredients": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.Ag868FaKOQnRTder]{Gather Ingredients}.",
     "WFRP4eEndeavours.Link.Familiar": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.MHvpBYGLCbhsS1jb]{Improve Familiar}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.m8x4xAhvCFrBYcmB]{Improve Familiar}",
     "WFRP4eEndeavours.Link.Ritual": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.cA1Vf1DUTSKnit1E]{Perform Ritual}.",
@@ -200,12 +205,12 @@
     "WFRP4eEndeavours.Link.PracticeLustria": "Practice a Skill.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.u8TqLX1IVl0RJnMX]{Practice a Skill (Lustria)}",
     "WFRP4eEndeavours.Link.CampLustria": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.8m5LbpBAEO6PFrzD]{Make Camp (Lustria)}",
     "WFRP4eEndeavours.Link.Boat": "Repair a Boat.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kgbyWNs5nzPmSKZn]{Repair a Boat}",
-    "WFRP4eEndeavours.Link.Skaven": "A Study in Skaven.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.l7fyh2Jdu81QVC3w]{A Study in Skaven}",
-    "WFRP4eEndeavours.Link.Best": "Only the Best.",
-    "WFRP4eEndeavours.Link.Hypotesis": "The Null Hypotesis.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HrkhcT4xbydE8X8c]{Resist Null}",
-    "WFRP4eEndeavours.Link.Hedge": "Hedge School.",
-    "WFRP4eEndeavours.Link.Visionaries": "No Use for Visionaries.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Y8S3DwkxYEFpMUdM]{Foment Dissent with Rosendorn}.<br>Then @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy} for Rosendorn",
-    "WFRP4eEndeavours.Link.Witness": "Bear Witness.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Bear Witness}",
+    "WFRP4eEndeavours.Link.Skaven": "@UUID[JournalEntry.cUF8jry7qNszfz3j.JournalEntryPage.BGukUForbSKMO0Il]{A Study in Skaven}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.l7fyh2Jdu81QVC3w]{A Study in Skaven}",
+    "WFRP4eEndeavours.Link.Best": "@UUID[JournalEntry.cUF8jry7qNszfz3j.JournalEntryPage.E1ZwPJl6lWnclIVY]{Only the Best}.",
+    "WFRP4eEndeavours.Link.Hypotesis": "@UUID[JournalEntry.cUF8jry7qNszfz3j.JournalEntryPage.vxFH6rghVNLgz0iF]{The Null Hypothesis}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HrkhcT4xbydE8X8c]{Resist Null}",
+    "WFRP4eEndeavours.Link.Hedge": "@UUID[JournalEntry.cUF8jry7qNszfz3j.JournalEntryPage.An587aUBrVt1WsFA]{Hedge School}.",
+    "WFRP4eEndeavours.Link.Visionaries": "@UUID[JournalEntry.cUF8jry7qNszfz3j.JournalEntryPage.8MC3cC9cSuEsJqJy].</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Y8S3DwkxYEFpMUdM]{Foment Dissent with Rosendorn}.<br>Then @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy} for Rosendorn",
+    "WFRP4eEndeavours.Link.Witness": "@UUID[JournalEntry.cUF8jry7qNszfz3j.JournalEntryPage.mA9Fbv6SesGjRZdh]{Bear Witness}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Bear Witness}",
     "WFRP4eEndeavours.Link.BlackMarket": "Black Market.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.DMNmy5VByEVgCzCt]{Black Market}",
     "WFRP4eEndeavours.Link.Gambling": "Gambling Den.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Ij6oHBcYgdoGzNc8]{Gambling Den}",
     "WFRP4eEndeavours.Link.Identities": "Plant Identities.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dszrHUqkqFE1CTN8]{Plant Identities}",
@@ -241,6 +246,9 @@
     "WFRP4eEndeavours.Link.Oath": "Swear Oath.",
     "WFRP4eEndeavours.Link.Slayer": "Take the Slayer Oath.",
     "WFRP4eEndeavours.Link.WaterDelving": "Find Water.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.18hYJdyqEJLRzWEn]{Find Water}.</p>",
+    "WFRP4eEndeavours.Link.Intrigue": "Intrigue.",
+    "WFRP4eEndeavours.Link.Aspersions": "Cast Aspersions.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.oyqW8UrNUbYhHwFQ]{Cast Aspersions}.</p>",
+    "WFRP4eEndeavours.Link.RepairReputation": "Repair Reputation.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.QRGZsrczpeNlKoRC]{Repair Reputation}.</p>",
 
     "WFRP4eEndeavours.Title.Animal": "Animal Training",
     "WFRP4eEndeavours.Title.Crafting": "Start Crafting",
@@ -316,6 +324,8 @@
     "WFRP4eEndeavours.Title.Trapping": "Start Customizing Trapping",
     "WFRP4eEndeavours.Title.Repair": "Repair Trapping",
     "WFRP4eEndeavours.Title.ForgeRune": "Start Forging Rune",
+    "WFRP4eEndeavours.Title.Aspersions": "Cast Aspersions",
+    "WFRP4eEndeavours.Title.RepairReputation": "Repair Reputation",
 
     "WFRP4eEndeavours.Failure.Animal": "<p>Your animal needs more training.</p>",
     "WFRP4eEndeavours.Failure.Expert": "<p>Still didn't find an expert.</p>",
@@ -384,6 +394,8 @@
     "WFRP4eEndeavours.Failure.WatchWilderness": "<p>You fall asleep.</p>",
     "WFRP4eEndeavours.Failure.Drakefire": "<p>You just can't concoct drakefire, if it didn't explode.</p>",
     "WFRP4eEndeavours.Failure.Repair": "<p>This trapping needs more work.</p>",
+    "WFRP4eEndeavours.Failure.Aspersions": "<p>The target discovers the source of the aspersions. It could even mar your own reputation.</p>",
+    "WFRP4eEndeavours.Failure.RepairReputation": "<p>You fail to repair the reputation.</p>",
 
     "WFRP4eEndeavours.Success.Animal": "<p>Your animal learned a new trick! You can add a @UUID[Compendium.wfrp4e-core.items.Item.V0naR1YbYCl0KIxp]{Trained} Creature Trait.</p>",
     "WFRP4eEndeavours.Success.Expert": "<p>An expert has been located.</p>",
@@ -452,6 +464,8 @@
     "WFRP4eEndeavours.Success.WatchWilderness": "<p>You keep watch the whole shift.</p>",
     "WFRP4eEndeavours.Success.Drakefire": "<p>You produce enough drakefire for {shots} shots.</p>",
     "WFRP4eEndeavours.Success.Repair": "<p>You are able to repair the trapping.</p>",
+    "WFRP4eEndeavours.Success.Aspersions": "<p>The aspersions are spread, but the target can have agents of their own.</p>",
+    "WFRP4eEndeavours.Success.RepairReputation": "<p>You manage to enhance the reputation.</p>",
 
     "WFRP4eEndeavours.NoSubmit": "You must choose a Skill",
     "WFRP4eEndeavours.NoSubmitWeapon": "You must choose a Weapon",
@@ -487,6 +501,7 @@
     "WFRP4eEndeavours.Drakefire.ChooseSkill": "Choose a skill to write your concoct.",
     "WFRP4eEndeavours.Archives.ChooseSkill": "Choose a skill for the consult.",
     "WFRP4eEndeavours.Repair.ChooseSkill": "Choose a skill to repair the trapping.",
+    "WFRP4eEndeavours.RepairReputation.ChooseSkill": "Choose a skill to repair your reputation.",
 
     "NAME.ArtDrawing":"Art (Drawing)",
     "NAME.ArtWriting":"Art (Writing)",
@@ -528,6 +543,10 @@
 
     "WFRP4eEndeavours.BatchName": "Batch Name",
     "WFRP4eEndeavours.Brew": "Brew: ",
+
+    "WFRP4eEndeavours.RepairReputation.Choose": "Do you want to repair your reputation or the reputation of another character?",
+    "WFRP4eEndeavours.Mine":"Mine",
+    "WFRP4eEndeavours.Another":"Another",
 
     "WFRP4eEndeavours.Trapping": "Customizing: ",
 
